manifests/deploy-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30056
    protocol: TCP
    name: http
  selector:
    app: nginx
  type : NodePort
