manifests/deploy-schedule.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-schedule-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: schedule-deployment
    spec:
      containers:
      - name: microservice-schedule
        #change the image name
        image: docker.io/ishangulhane/microservice-schedule
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
        volumeMounts:
        - name: keystore
          mountPath: /etc/wlp/config/keystore
        - name: truststore
          mountPath: /etc/wlp/config/truststore
        - name: liberty-config
          mountPath: /config/configDropins
      volumes:
       - name: keystore
         secret:
           secretName: mb-keystore
       - name: truststore
         secret:
           secretName: mb-truststore
       - name: liberty-config
         configMap:
           name: liberty-config
           items:
             - key: keystore.xml
               path: defaults/keystore.xml
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
  labels:
    app: microprofile-app
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
      nodePort: 30054
  selector:
    name: schedule-deployment
  type: NodePort
