manifests/deploy-webapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-webapp-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: webapp-deployment
    spec:
      containers:
      - name: microservice-webapp
        #change the image name
        image: journeycode/microservice-webapp
        ports:
          - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app: microprofile-app
spec:
  clusterIP: None
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    name: webapp-deployment
